--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <input type="text" id="driverName" name="שם הנהג" required />
 
         <label for="kmStart">ק"מ יציאה</label>
-        <input type="number" id="kmStart" name="ק"מ יציאה" required />
+        <input type="number" id="kmStart" name="ק\"מ יציאה" required />
 
         <label for="timeStart">שעת יציאה</label>
         <input type="time" id="timeStart" name="שעת יציאה" required />
@@ -160,7 +160,7 @@
         </div>
 
         <label for="kmEnd">ק"מ חזרה</label>
-        <input type="number" id="kmEnd" name="ק"מ חזרה" />
+        <input type="number" id="kmEnd" name="ק\"מ חזרה" />
 
         <label for="timeEnd">שעת חזרה</label>
         <input type="time" id="timeEnd" name="שעת חזרה" />
@@ -190,7 +190,7 @@
         data[key] = value;
       });
 
-      fetch('https://script.google.com/macros/s/AKfycbwPEf4fZYZf-GVbF995fnLgd99YaJ_7SBSXEvdJdggWsmDBjB_Tg3BOBm1zFHYyahca/exec', {
+      fetch('https://script.google.com/macros/s/AKfycbzcZmyWcIOOwWtZVor6-uop5WFqu6CGSLt8kfV54GR72SteEGMllHLDtPsPNNhUeKiy/exec', {
         method: 'POST',
         mode: 'no-cors',
         headers: {
