--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
     <div class="form-box">
       <h2>טופס מילוי פרטי נסיעה אמבולנס מס' רישוי - 786-85-703</h2>
       <form id="ambulanceForm">
-        <label for="driverName">שם הנהג</label>
+        <label for="driverName">שם הנהג / נהגת</label>
         <input type="text" id="driverName" name="שם הנהג" required />
 
-        <label for="driverId">מספר זהות נהג</label>
+        <label for="driverId">מספר זהות נהג / נהגת</label>
         <input type="text" id="driverId" name="מספר זהות נהג" required />
 
         <label for="kmStart">ק"מ יציאה</label>
