--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
         <label for="address">כתובת</label>
         <input type="text" id="address" name="כתובת" />
 
-        <label for="from">ממוצא</label>
-        <input type="text" id="from" name="ממוצא" />
+        <label for="from">מוצא</label>
+        <input type="text" id="from" name="מוצא" />
 
-        <label for="to">ליעד</label>
-        <input type="text" id="to" name="ליעד" />
+        <label for="to">יעד</label>
+        <input type="text" id="to" name="יעד" />
 
         <label for="purpose">מהות הנסיעה</label>
         <textarea id="purpose" name="מהות הנסיעה"></textarea>
