--- a/index.html
+++ b/index.html
@@ -223,22 +223,14 @@
       e.preventDefault();
 
       const formData = new FormData(form);
-      const data = {};
-      formData.forEach((value, key) => {
-        data[key] = value;
-      });
 
       loader.style.display = 'block';
       successMsg.style.display = 'none';
 
       fetch('https://script.google.com/macros/s/AKfycbz49pF-IGRAW2FuAyk09CM9D_TbQixZlU15tj7sI9A3vgkNqvE6191AqZ-v4fEOvMIV/exec', {
-
         method: 'POST',
         mode: 'no-cors',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(data)
+        body: formData
       }).then(() => {
         form.reset();
         loader.style.display = 'none';
