--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <input type="text" name="מספר זהות נהג / נהגת" required>
 
       <label>ק"מ יציאה</label>
-      <input type="number" name="ק&quot;מ יציאה" required>
+      <input type="number" name="קמ יציאה" required>
 
       <label>שעת יציאה</label>
       <input type="time" name="שעת יציאה" required>
@@ -178,7 +178,7 @@
       </div>
 
       <label>ק"מ חזרה</label>
-      <input type="number" name="ק&quot;מ חזרה">
+      <input type="number" name="קמ חזרה">
 
       <label>שעת חזרה</label>
       <input type="time" name="שעת חזרה">
