--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>טופס נסיעה - אמבולנס סביונים</title>
   <meta property="og:title" content="טופס נסיעה - אמבולנס סביונים" />
 <meta property="og:description" content="מלאו את פרטי הנסיעה לאמבולנס סביונים" />
-<meta property="og:image" content="https://aviver100.github.io/Savyonim/1745179999550.png" />
+<meta property="og:image" content="https://aviver100.github.io/Savyonim/ambulance.png" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://aviver100.github.io/Savyonim/" />
   <style>
