--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
       <label>מספר זהות נהג / נהגת</label>
       <input type="text" name="מספר זהות נהג / נהגת" required>
 
-      <label>ק"מ יציאה</label>
-      <input type="number" name="קמ יציאה" required>
+      <label>ק"מ יציאה - (לא חובה)</label>
+      <input type="number" name="קמ יציאה" >
 
       <label>שעת יציאה</label>
-      <input type="time" name="שעת יציאה" required>
+      <input type="time" name="שעת יציאה">
 
-      <h3>פרטי הנוסע / נוסעת</h3>
+      <h3>פרטי הנוסע / נוסעת - (חולה)</h3>
 
       <label>שם פרטי</label>
       <input type="text" name="שם פרטי" required>
@@ -182,7 +182,7 @@
         <input type="text" name="זמן המתנה">
       </div>
 
-      <label>ק"מ חזרה</label>
+      <label>ק"מ חזרה - (לא חובה)</label>
       <input type="number" name="קמ חזרה">
 
       <label>שעת חזרה</label>
